--- a/examples/example-android/androidBleSdkTestApp/app/src/main/res/layout/activity_main.xml
+++ b/examples/example-android/androidBleSdkTestApp/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
             <Button
@@ -21,12 +21,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/selectDeviceButton" />
-
-            <Button
-                android:id="@+id/connect_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="connect" />
 
             <Button
                 android:id="@+id/disconnect_button"
@@ -38,12 +32,11 @@
     </ScrollView>
 
     <TextView
-        android:id="@+id/textViewHeartRateLabel"
-        android:layout_width="180dp"
-        android:layout_height="70dp"
+        android:id="@+id/textViewConnectionState"
+        android:layout_width="345dp"
+        android:layout_height="88dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="84dp"
-        android:text="@string/heartRateLabel"
+        android:layout_marginTop="36dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
@@ -61,21 +54,28 @@
         android:id="@+id/textViewAccelYLabel"
         android:layout_width="180dp"
         android:layout_height="70dp"
-        android:layout_marginStart="32dp"
         android:text="@string/AccelYLabel"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textViewHeartRateLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewAccelXLabel" />
 
     <TextView
         android:id="@+id/textViewAccelZLabel"
         android:layout_width="180dp"
         android:layout_height="70dp"
-        android:layout_marginStart="32dp"
         android:text="@string/AccelZLabel"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textViewHeartRateLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewAccelYLabel" />
+
+    <TextView
+        android:id="@+id/textViewAccelTotalLabel"
+        android:layout_width="180dp"
+        android:layout_height="70dp"
+        android:text="@string/AccelTotalLabel"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintStart_toStartOf="@+id/textViewHeartRateLabel"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAccelZLabel" />
 
     <TextView
         android:id="@+id/textViewHeartRateValue"
@@ -89,6 +89,17 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textViewHeartRateLabel"
         app:layout_constraintTop_toTopOf="@+id/textViewHeartRateLabel" />
+
+    <TextView
+        android:id="@+id/textViewHeartRateLabel"
+        android:layout_width="180dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="36dp"
+        android:text="@string/heartRateLabel"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewConnectionState" />
 
     <TextView
         android:id="@+id/textViewAccelXValue"
@@ -128,5 +139,18 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textViewHeartRateLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewAccelYValue" />
+
+    <TextView
+        android:id="@+id/textViewAccelTotalValue"
+        android:layout_width="84dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/AccelTotalValue"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/textViewHeartRateLabel"
+        app:layout_constraintTop_toBottomOf="@+id/textViewAccelZValue" />
 
 </android.support.constraint.ConstraintLayout>
