--- a/examples/example-android/androidBleSdkTestApp/app/src/main/res/layout/activity_main.xml
+++ b/examples/example-android/androidBleSdkTestApp/app/src/main/res/layout/activity_main.xml
@@ -6,55 +6,29 @@
     android:layout_height="match_parent"
     tools:context="polar.com.androidblesdk.MainActivity">
 
-    <ScrollView
-        android:id="@+id/scrollView2"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <Button
-                android:id="@+id/scan_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/selectDeviceButton" />
-
-            <Button
-                android:id="@+id/disconnect_button"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="disconnect" />
-
-        </LinearLayout>
-    </ScrollView>
-
     <TextView
         android:id="@+id/textViewConnectionState"
-        android:layout_width="345dp"
-        android:layout_height="88dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="60dp"
-        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
-
-    <TextView
-        android:id="@+id/textViewVersion"
-        android:layout_width="347dp"
-        android:layout_height="37dp"
-        android:layout_marginTop="8dp"
+        android:layout_width="330dp"
+        android:layout_height="24dp"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewVersion" />
+
+    <TextView
+        android:id="@+id/textViewVersion"
+        android:layout_width="330dp"
+        android:layout_height="24dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias=".5"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textViewAccelXLabel"
         android:layout_width="180dp"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:text="@string/AccelXLabel"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintStart_toStartOf="@+id/textViewHeartRateLabel"
@@ -63,7 +37,7 @@
     <TextView
         android:id="@+id/textViewAccelYLabel"
         android:layout_width="180dp"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:text="@string/AccelYLabel"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintStart_toStartOf="@+id/textViewHeartRateLabel"
@@ -72,7 +46,7 @@
     <TextView
         android:id="@+id/textViewAccelZLabel"
         android:layout_width="180dp"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:text="@string/AccelZLabel"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintStart_toStartOf="@+id/textViewHeartRateLabel"
@@ -81,7 +55,7 @@
     <TextView
         android:id="@+id/textViewAccelTotalLabel"
         android:layout_width="180dp"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:text="@string/AccelTotalLabel"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintStart_toStartOf="@+id/textViewHeartRateLabel"
@@ -104,17 +78,16 @@
         android:id="@+id/textViewHeartRateLabel"
         android:layout_width="180dp"
         android:layout_height="70dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="40dp"
         android:text="@string/heartRateLabel"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewConnectionState" />
+        app:layout_constraintStart_toStartOf="@+id/evoInUseCheckBox"
+        app:layout_constraintTop_toBottomOf="@+id/evoInUseCheckBox" />
 
     <TextView
         android:id="@+id/textViewAccelXValue"
         android:layout_width="128dp"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/AccelXValue"
@@ -127,7 +100,7 @@
     <TextView
         android:id="@+id/textViewAccelYValue"
         android:layout_width="128dp"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/AccelYValue"
@@ -140,7 +113,7 @@
     <TextView
         android:id="@+id/textViewAccelZValue"
         android:layout_width="128dp"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/AccelZValue"
@@ -153,7 +126,7 @@
     <TextView
         android:id="@+id/textViewAccelTotalValue"
         android:layout_width="128dp"
-        android:layout_height="70dp"
+        android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
         android:text="@string/AccelTotalValue"
@@ -162,5 +135,55 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textViewHeartRateLabel"
         app:layout_constraintTop_toBottomOf="@+id/textViewAccelZValue" />
+
+    <Button
+        android:id="@+id/connectButton"
+        android:layout_width="160dp"
+        android:layout_height="80dp"
+        android:text="Connect"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toStartOf="@+id/textViewConnectionState"
+        app:layout_constraintTop_toBottomOf="@+id/textViewConnectionState" />
+
+    <Button
+        android:id="@+id/disconnectButton"
+        android:layout_width="160dp"
+        android:layout_height="80dp"
+        android:text="Disconnect"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+        app:layout_constraintStart_toEndOf="@+id/connectButton"
+        app:layout_constraintTop_toTopOf="@+id/connectButton" />
+
+    <Button
+        android:id="@+id/startTestButton"
+        android:layout_width="160dp"
+        android:layout_height="125dp"
+        android:backgroundTint="@android:color/holo_green_dark"
+        android:text="Start Test"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintStart_toStartOf="@+id/connectButton"
+        app:layout_constraintTop_toBottomOf="@+id/connectButton" />
+
+    <Button
+        android:id="@+id/endTestButton"
+        android:layout_width="160dp"
+        android:layout_height="125dp"
+        android:backgroundTint="@android:color/holo_red_light"
+        android:text="End    Test"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        app:layout_constraintStart_toStartOf="@+id/disconnectButton"
+        app:layout_constraintTop_toTopOf="@+id/startTestButton" />
+
+    <CheckBox
+        android:id="@+id/evoInUseCheckBox"
+        style="@style/Widget.AppCompat.CompoundButton.CheckBox"
+        android:layout_width="190dp"
+        android:layout_height="49dp"
+        android:layout_marginTop="21dp"
+        android:text="EVO in use"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/startTestButton"
+        app:layout_constraintTop_toBottomOf="@+id/startTestButton" />
 
 </android.support.constraint.ConstraintLayout>
